# ADR-py

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/.workflows/: push-test.yaml
.github/workflows/: ci.yaml  publish.yaml  push-test.yaml  test.yaml
src/adrpy/: __init__.py
src/adrpy/entrypoints/: __init__.py  cli.py
src/adrpy/injection/: __init__.py  modules.py  settings.py
src/adrpy/repositories/adr/: base.py  repository.py
src/adrpy/services/file/: base.py  service.py
src/adrpy/services/template/: base.py  service.py
src/adrpy/shared_kernel/: constants.py  dtos.py  enums.py  logging.py  settings.py
src/adrpy/shared_kernel/value_objects/: template.py
src/adrpy/templates/: initial-adr.md  new-adr.md
src/adrpy/use_cases/: create.py  creating.py  initialize.py  initializing.py
tests/: conftest.py  test_foo.py
tests/fixtures/: repository.py
tests/integration/repositories/implementation/: test_adr_file_repository.py
tests/integration/repository/implementation/: test_adr_file_repository.py
tests/integration/services/implementation/: test_file_service.py
tests/unit/: test_settings.py
