[tool.poetry]
name = "adr"
version = "0.3.0"
description = "This Python script is designed to help software development teams document their architecture decisions using Architecture Decision Records (ADRs)."
authors = ["Daniel Różycki <altosterino@gmail.com>"]
readme = "README.md"
packages = [{include = "adrpy", from = "src"}]

[tool.poetry.scripts]
adr = "adrpy.entrypoints.cli:cli_entrypoint"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.0"
loguru = "^0.7.0"
rich = "^13.3.3"
mako = "^1.3.0"
lidipy = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# THIRD PARTY
[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "T20"]
