[project]
name = "adr"
version = "0.4.0"
description = "This Python script is designed to help software development teams document their architecture decisions using Architecture Decision Records (ADRs)."
authors = [{ name = "Daniel Różycki", email = "altosterino@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "typer==0.16",
    "loguru==0.7.3",
    "mako==1.3.10",
    "lidipy==0.3.1",
]

[project.scripts]
adr = "adrpy.entrypoints.cli:cli_entrypoint"

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.5,<9",
    "ruff>=0.10.0,<0.11",
]

[tool.hatch.build.targets.sdist]
include = ["src/adrpy"]

[tool.hatch.build.targets.wheel]
include = ["src/adrpy"]

[tool.hatch.build.targets.wheel.sources]
"src/adrpy" = "adrpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "T20"]

[tool.pytest.ini_options]
addopts = ["--verbose"]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.uv]
required-version = "0.7.8"
